--- a/index.html
+++ b/index.html
@@ -3,12 +3,59 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Surf & Paddle</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="normalize.css" />
-	<link rel="stylesheet" href="font-awesome.css" />
-	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css" />
 </head>
-<body>
-	
-</body>
+	<body>
+		<div id="Surf_Paddle_Page">
+			<div id="heading">
+				<p>Surf & Paddle Co.</p>
+				<h1>An Iron Yard Academy Project Est. Fall 2013 </h1>
+			</div>
+			<div id="articles">
+				<div class="section1">
+					<h4>A fantastic engaging headline goes here</h4>
+					<h5>Anne Marie    on Monday Oct 7th 9:22pm</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut amet qui voluptate adipisci nesciunt suscipit architecto atque perferendis error, tempore numquam, repellendus est modi, quae nobis, sint beatae. Molestiae repudiandae adipisci pariatur, temporibus ea qui minus quae repellat velit veniam alias doloremque iusto dolorem neque praesentium mollitia. Voluptatem earum eos suscipit vitae deserunt quos nihil expedita illo? Qui sunt tempora beatae! Magnam aspernatur voluptates ut expedita! Numquam, maiores nulla eos libero amet quae itaque qui.</p>
+					<h2>|   WOAH, THAT'S RADICAL!</h2>
+					<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci itaque error corporis necessitatibus rerum harum similique assumenda, quia dolore eligendi temporibus qui. Perspiciatis, a.</P>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatibus distinctio accusamus labore fugiat, qui!</p>
+					<div>
+						<ul class="clickthese">
+							<li class="click">read comments </li>
+							<li class="click">Read later</li>
+							<li class="click">Share This Post</li>
+						</ul>
+						<ul class="allicons">
+							<li class="icons">X</li>
+							<li class="icons">X</li>
+							<li class="icons">X</li>
+						</ul>
+					</div>
+				</div>
+				<div class="section2">
+					<h3>Some title</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit delectus aliquid officiis nesciunt. Odit, molestias, tenetur. Quibusdam perspiciatis ratione quos et nihil atque fugit, maxime quo sunt porro, nobis in.</p>
+					
+				</div>
+			</div>
+			<div id="bottomtitle">Most Popular Posts</div>
+			<div id="imagelinks">
+				<div class="image">Surfer Girl</div>
+				<div class="image">Beer Flight</div>
+				<div class="image">Alan in Hangover</div>
+				<div class="image">Booze for Days</div>
+			</div>
+			<div id="footer">
+				<nav>
+					<ul class="navitems">
+						<li>Nav item 1 |</li>
+						<li>Nav item 2 |</li>
+						<li>Nav item 3 |</li>
+						<li>Nav item 4 |</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</body>
 </html>
