--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 				</div>
 				<div class="section2">
 					<h3>Some title</h3>
+						<div id="paddleboarder">
+						</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit delectus aliquid officiis nesciunt. Odit, molestias, tenetur. Quibusdam perspiciatis ratione quos et nihil atque fugit, maxime quo sunt porro, nobis in.</p>
 					
 				</div>
