--- a/CSS/images/Surf & Paddle.htm
+++ b/CSS/images/Surf & Paddle.htm
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Surf & Paddle</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="css/normalize.css" />
+<!-- saved from url=(0052)file:///Users/carriesmidt/TIY/surf_paddle/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+	<title>Surf &amp; Paddle</title>
+	<link rel="stylesheet" type="text/css" href="./Surf &amp; Paddle_files/style.css">
+	<link rel="stylesheet" href="./Surf &amp; Paddle_files/normalize.css">
 </head>
 	<body>
 		<div id="Surf_Paddle_Page">
 			<div id="heading">
-				<p>Surf & Paddle Co.</p>
-				<div class="subtitle"> An Iron Yard Academy Project Est. Fall 2013 </div>
+				<p>Surf &amp; Paddle Co.</p>
+				<h1>An Iron Yard Academy Project Est. Fall 2013 </h1>
 			</div>
 			<div id="articles">
 				<div class="section1">
 					<h4>A fantastic engaging headline goes here</h4>
-						<div>
-							<ul class="authinfo">
-								<li class="authimg"></li>
-								<li class="name">Sheyanne Victoria </li>
-								<li class="date">On Monday Oct 7th 9:22pm</li>
-							</ul>
-						</div>   
+					<div id="authimg"></div>
+					<h5>Anne Marie    on Monday Oct 7th 9:22pm</h5>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut amet qui voluptate adipisci nesciunt suscipit architecto atque perferendis error, tempore numquam, repellendus est modi, quae nobis, sint beatae. Molestiae repudiandae adipisci pariatur, temporibus ea qui minus quae repellat velit veniam alias doloremque iusto dolorem neque praesentium mollitia. Voluptatem earum eos suscipit vitae deserunt quos nihil expedita illo? Qui sunt tempora beatae! Magnam aspernatur voluptates ut expedita! Numquam, maiores nulla eos libero amet quae itaque qui.</p>
-					<h2>|       WOAH, THAT'S RADICAL!</h2>
-					<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci itaque error corporis necessitatibus rerum harum similique assumenda, quia dolore eligendi temporibus qui. Perspiciatis, a.</P>
+					<h2>|   WOAH, THAT'S RADICAL!</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci itaque error corporis necessitatibus rerum harum similique assumenda, quia dolore eligendi temporibus qui. Perspiciatis, a.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatibus distinctio accusamus labore fugiat, qui!</p>
 					<div>
 						<ul class="clickthese">
@@ -50,7 +45,6 @@
 					
 						<div id="paddleboarder">
 						</div>
-					<h3 class="sidebar">Sidebar Section Heading</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit delectus aliquid officiis nesciunt. Odit, molestias, tenetur. Quibusdam perspiciatis ratione quos et nihil atque fugit, maxime quo sunt porro, nobis in.</p>
 					
 				</div>
@@ -73,5 +67,5 @@
 				</nav>
 			</div>
 		</div>
-	</body>
-</html>
+	
+</body></html>
